fix: z-index

--- a/src/floating-sdk-cafe24-modal.css
+++ b/src/floating-sdk-cafe24-modal.css
@@ -249,7 +249,7 @@
     bottom: 0;
     left: 0;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
-    z-index: 10000000;
+    z-index: 2147483646;
     width: 100%;
     height: 40%;
 }
@@ -485,7 +485,7 @@
     align-items: center;
     justify-content: flex-end;
     transition: width 0.5s ease;
-    z-index: 9999999;
+    z-index: 2147483647;
 }
 
 .chat-input-wrapper {
@@ -504,7 +504,7 @@
     align-items: center;
     justify-content: space-between;
     transition: width 0.5s ease;
-    z-index: 9999999;
+    z-index: 2147483647;
 }
 
 .chat-input {
